# vfs

./: .gitignore  CHANGELOG.md  Cargo.toml  MANUAL.md  README.md  SPEC.md  TESTING.md  dist-workspace.toml  hawk.toml  rust-toolchain.toml
.agents/05_09_2026/: 47218d42-55ed-48db-a1e4-e50cc198d5b5_tail.md  4ac604e7-5cb2-4142-a802-fe3031d0445e_tail.md  4bac0976-5602-47f3-abd7-8092fb18fed7_tail.md  53692bea-6abb-435a-b554-fddb54c1d24f_tail.md  6bba52c7-2f26-43ee-bbe7-37b84ddcb76a_tail.md  74c12a0a-ca0a-4521-88b5-aaed6a0f1a4a_tail.md  75c4f579-881d-4344-ad6c-8f0ef1a9e097_tail.md  77b0fb86-ba2f-4f7f-9d10-4e748e0eeca3_tail.md  aca9384a-08c8-4426-8a79-77219bb9d669_tail.md  eb94d209-d6b9-41b0-a7b3-6a0505e18911_tail.md  efa1d6ac-4175-4c70-9378-de4bf98622a4_tail.md  fc03365a-1373-4015-baa5-6f8c21eb49a8_tail.md
.agents/05_10_2026/: 028cc1d5-c429-4a90-a330-3f27d53364db_tail.md  041a426e-12d2-4947-86a4-896d14a69101_tail.md  1bb4f957-35df-4302-956b-3f2db26c34c3_tail.md  43373a9a-d39d-45e1-9957-aaf7f7eb31f5_tail.md  46656ffe-82e4-489b-976d-7860bd8a039e_tail.md  49275f72-0614-4fb4-856b-75c4c118c60d_tail.md  54b0f907-9c69-4650-8221-f5f719826052_tail.md  59a00337-952f-45c7-b28b-564624bf7942_tail.md  5ad0218b-f6f4-4803-95a7-4bc0ebab0bc0_tail.md  5ff79a8c-e0f3-4aba-9e9c-36c23c8f6e1a_tail.md  609dd466-ef90-4b21-a067-d7e8b2bf2a06_tail.md  65b48f8a-002e-410c-9f34-201bace10400_tail.md  6e3df4c0-a4c0-4019-980c-aa883e8e27bc_tail.md  73b3406f-f6ef-4bfc-bf6e-dcf00937cdd1_tail.md  7ffbc4cc-3ad2-4d75-a0fb-4770e5f0b115_tail.md  83725d61-9d99-49d0-9762-2994626179d2_tail.md  8675933d-284b-4dc0-9a15-f563b7539e97_tail.md  9175de02-9140-4a44-af3c-b33534d7df13_tail.md  9184f058-8127-461c-860d-3f538b4a6ec6_tail.md  947ca8c1-5333-4dad-b10d-bfd5aed542f8_tail.md  97658bac-3bc5-475d-bc4b-577b519e61c0_tail.md  980d9aad-bd2e-46e8-a13f-80a4ef5f7825_tail.md  a1590d07-9f24-4488-bc8d-efcf7e04742b_tail.md  a2c592db-e2ab-4f95-8e57-8efb69b227f9_tail.md  a567401c-2c65-4a1a-97a4-b4a9f6642ff1_tail.md  a715dea1-de87-4469-97a8-7cd97eb426af_tail.md  a729ee8d-978f-4b4f-a935-97fb5963ae9f_tail.md  (+12 more)
.agents/kernel/: ab-guest.sh  (+4 more)
cli/: Cargo.toml
cli/src/: config.rs  fuse.rs  fuse_config.rs  knobs.rs  lib.rs  main.rs  nfs.rs  opts.rs  profiling.rs
cli/src/cmd/: clone.rs  completions.rs  exec.rs  fs.rs  init.rs  mcp_server.rs  migrate.rs  mod.rs  mount.rs  mount_stub.rs  nfs.rs  ps.rs  run.rs  run_darwin.rs  run_linux.rs  run_not_supported.rs  run_windows.rs  safety.rs  supervise.rs
cli/src/fuser/: channel.rs  deferred_notify.rs  mod.rs  notify.rs  reply.rs  request.rs  session.rs  uring.rs
cli/src/fuser/ll/: fuse_abi.rs  mod.rs  notify.rs  reply.rs  request.rs
cli/src/fuser/mnt/: fuse_pure.rs  mount_options.rs
cli/src/mount/: fuse.rs  mod.rs  nfs.rs
cli/src/nfsserve/: context.rs  mod.rs  mount.rs  nfs.rs  nfs_handlers.rs  portmap.rs  tcp.rs  vfs.rs
cli/src/sandbox/: darwin.rs  linux.rs  mod.rs
cli/tests/: all.sh  test-corruption-torture.sh  test-ephemeral-sidecar-cleanup.sh  test-fuse-sigint-panic-census.sh  test-overlay-base-dir-rename-exdev.sh  test-profile-error-summary.sh  test-signal-teardown.sh  test-teardown-bounded.sh
crates/agentfs-cli/: Cargo.toml  build.rs
crates/agentfs-cli/perf/syscall/: run.sh
crates/agentfs-cli/src/: config.rs  docs.rs  knobs.rs  lib.rs  logging.rs  main.rs  opts.rs
crates/agentfs-cli/src/cmd/: clone.rs  completions.rs  exec.rs  fs.rs  init.rs  mcp_server.rs  migrate.rs  mod.rs  mount.rs  nfs.rs  profiling.rs  ps.rs  safety.rs  sync.rs  timeline.rs
crates/agentfs-cli/src/cmd/mcp_server/: tests.rs
crates/agentfs-cli/src/cmd/run/: darwin.rs  linux.rs  mod.rs  not_supported.rs  tests.rs
crates/agentfs-cli/tests/: all.sh  migrate_fixtures.rs  test-cli-smoke.sh  test-corruption-torture.sh  test-ephemeral-sidecar-cleanup.sh  test-fuse-cache-invalidation.sh  test-fuse-sigint-panic-census.sh  test-init.sh  test-mcp-server.sh  test-migrate-consolidation.sh  test-mount.sh  test-overlay-base-dir-rename-exdev.sh  test-overlay-delta-in-base-dir.sh  test-overlay-whiteout.sh  test-profile-error-summary.sh  test-run-bash.sh  test-run-git.sh  test-run-read-scoping.sh  test-run-syscalls.sh  test-second-opener.sh  test-sigkill-recovery.sh  test-signal-teardown.sh  test-symlinks.sh  test-teardown-bounded.sh
crates/agentfs-cli/tests/fixtures/migrate/: v0_0.db  v0_2.db  v0_4-encrypted.db  v0_4.db
crates/agentfs-cli/tests/syscall/: test-pread-sparse.c
crates/agentfs-fuse/: Cargo.toml
crates/agentfs-fuse/src/: lib.rs  telemetry.rs
crates/agentfs-fuse/src/adapter/: cache.rs  config.rs  ino_files.rs  mod.rs  write_buffer.rs
crates/agentfs-fuse/src/transport/: channel.rs  deferred_notify.rs  mod.rs  notify.rs  reply.rs  request.rs  session.rs  uring.rs
crates/agentfs-fuse/src/transport/ll/: fuse_abi.rs  mod.rs  reply.rs  request.rs
crates/agentfs-fuse/src/transport/mnt/: fuse_pure.rs  mod.rs  mount_options.rs
crates/agentfs-mount/: Cargo.toml
crates/agentfs-mount/src/: daemon.rs  fuse.rs  lib.rs  nfs.rs  supervise.rs
crates/agentfs-nfs/: Cargo.toml
crates/agentfs-nfs/src/: adapter.rs  lib.rs
crates/agentfs-nfs/src/server/: mod.rs  mount.rs  mount_handlers.rs  nfs.rs  nfs_handlers.rs  permissions.rs  portmap.rs  rpc.rs  rpcwire.rs  tcp.rs  transaction_tracker.rs  vfs.rs  write_counter.rs  xdr.rs
docs/: KNOBS.md  MANUAL.md  SPEC.md  TESTING.md
sandbox/: Cargo.toml
sandbox/src/syscall/: file.rs
sandbox/src/vfs/: fdtable.rs
scripts/: gate.sh  update-version.py
sdk/rust/: Cargo.toml
sdk/rust/benches/: overlayfs.rs  workload.rs
sdk/rust/src/: connection_pool.rs  kvstore.rs  lib.rs  profiling.rs  schema.rs  toolcalls.rs
sdk/rust/src/config/: core.rs  env.rs  mod.rs
sdk/rust/src/filesystem/: agentfs.rs  hostfs_linux.rs  mod.rs  overlayfs.rs
sdk/rust/src/filesystem/agentfs/: batcher.rs  caches.rs  file.rs  fs.rs  import.rs  lifecycle.rs  mod.rs  path_api.rs  store.rs  tests.rs
sdk/rust/src/filesystem/overlay/: copyup.rs  fs.rs  maps.rs  mod.rs  partial.rs  tests.rs
sdk/rust/src/schema/: integrity.rs
sdk/rust/tests/: concurrency_integrity.rs  snapshot_restore.rs
(+202 files in other folders)
