[workspace]
members = ["cli", "sdk/rust"]
resolver = "2"

[workspace.package]
version = "0.6.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/tursodatabase/agentfs"

[workspace.dependencies]
agentfs-sdk = { path = "sdk/rust" }

anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
byteorder = "1.5"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "=4.5.61", features = ["unstable-dynamic"] }
criterion = { version = "0.5", features = ["async_tokio"] }
dirs = "6"
filetime = "0.2"
hex = "0.4"
libc = "0.2"
log = "0.4"
lru = "0.12"
memchr = "2.7"
nix = { version = "0.29", features = ["fs", "user"] }
num-derive = "0.4"
num-traits = "0.2"
page_size = "0.6"
parking_lot = "0.12.5"
proptest = "1.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.147"
sha1 = "0.10"
smallvec = "1.6"
tempfile = "3.23.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
turso = { version = "0.5", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
zerocopy = { version = "0.8", features = ["derive"] }

# Ensure transitive `aegis` (pulled in by `turso`) builds on macOS arm64 by
# forcing the `pure-rust` feature, which skips the C/NEON backend that fails
# with Apple clang (`veor3q_u8` in `aegis128l_neon_sha3.c`).
aegis = { version = "0.9.6", features = ["pure-rust"] }

# The profile that `dist` will build with.
[profile.dist]
inherits = "release"
lto = "thin"

[profile.bench]
debug = true
