[package]
name = "agentfs"
version = "0.6.4"
edition = "2021"
repository = "https://github.com/tursodatabase/agentfs"

[lib]
name = "agentfs"
path = "src/lib.rs"

[[bin]]
name = "agentfs"
path = "src/main.rs"

[features]
default = ["sandbox", "fuse-modern"]
strict = []
sandbox = [
    "dep:agentfs-sandbox",
    "dep:reverie",
    "dep:reverie-ptrace",
    "dep:reverie-process",
]

# Vendored fuser is gated per protocol minor version. Enable the full cascade up
# to ABI 7.31 so we can both negotiate the kernel protocol that supports the
# capabilities init() already advertises (FUSE_DO_READDIRPLUS, FUSE_WRITEBACK_CACHE,
# FUSE_PARALLEL_DIROPS, FUSE_CACHE_SYMLINKS, FUSE_NO_OPENDIR_SUPPORT, FUSE_MAX_PAGES,
# FUSE_EXPLICIT_INVAL_DATA, etc.) and actually decode the opcodes the kernel sends
# when those capabilities are negotiated (FUSE_READDIRPLUS=44, FUSE_RENAME2=45,
# FUSE_LSEEK=46, FUSE_COPY_FILE_RANGE=47). Without these, the kernel may issue
# opcode 44 and the dispatcher returns ENOSYS, breaking readdir on the mount.
fuse-modern = [
    "abi-7-19",
    "abi-7-20",
    "abi-7-21",
    "abi-7-22",
    "abi-7-23",
    "abi-7-24",
    "abi-7-25",
    "abi-7-26",
    "abi-7-27",
    "abi-7-28",
    "abi-7-29",
    "abi-7-30",
    "abi-7-31",
    "abi-7-36",
    "abi-7-41",
    "abi-7-42",
]
abi-7-19 = []
abi-7-20 = []
abi-7-21 = []
abi-7-22 = []
abi-7-23 = []
abi-7-24 = []
abi-7-25 = []
abi-7-26 = []
abi-7-27 = []
abi-7-28 = []
abi-7-29 = []
abi-7-30 = []
abi-7-31 = []
# ABI 7.36-7.42 uplift. The vendored fuser carries a distinct init-struct delta
# only at 7.36 (adds flags2). 7.40 additionally pulls in FUSE_PASSTHROUGH
# scaffolding (FOPEN_PASSTHROUGH / BackingId / open_backing) that is not
# implemented here, so it is intentionally NOT enabled. 7.41/7.42 add no
# init-struct fields — 7.42 only adds the FUSE_OVER_IO_URING capability bit — and
# the 7.36 fuse_init_out is already a kernel-compatible 64 bytes (the trailing
# reserved[7] covers max_stack_depth + request_timeout + unused), so minor 42 is
# advertised on the 7.36 layout, skipping 7.40's passthrough.
abi-7-36 = []
abi-7-40 = ["abi-7-36"]
abi-7-41 = ["abi-7-36"]
abi-7-42 = ["abi-7-41"]

[dependencies]
agentfs-sdk = { path = "../sdk/rust" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
turso = { version = "0.5", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12.5"
clap_complete = { version = "=4.5.61", features = ["unstable-dynamic"] }
dirs = "6"
serde_json = "1.0.147"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4.42", features = ["serde"] }

# MCP Server support
base64 = "0.22"

# NFS server for userspace filesystem (used by `agentfs run` and `agentfs nfs`)
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"
async-trait = "0.1"
# Vendored nfsserve dependencies
byteorder = "1.5"
num-derive = "0.4"
num-traits = "0.2"
filetime = "0.2"

# Unix dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux-only dependencies for FUSE and sandbox functionality
[target.'cfg(target_os = "linux")'.dependencies]
# Sandbox dependencies - (requires libunwind-dev on ARM)
agentfs-sandbox = { path = "../sandbox", optional = true }
reverie = { git = "https://github.com/facebookexperimental/reverie", optional = true }
reverie-ptrace = { git = "https://github.com/facebookexperimental/reverie", optional = true }
reverie-process = { git = "https://github.com/facebookexperimental/reverie", optional = true }
# Vendored fuser dependencies (pure-Rust FUSE implementation)
log = "0.4"
memchr = "2.7"
page_size = "0.6"
smallvec = "1.6"
zerocopy = { version = "0.8", features = ["derive"] }
nix = { version = "0.29", features = ["fs", "user"] }
# FUSE-over-io_uring transport (opt-in via AGENTFS_FUSE_TRANSPORT=uring)
io-uring = "0.7"

# macOS dependencies for NFS functionality (no FUSE - uses nfsserve instead)
[target.'cfg(target_os = "macos")'.dependencies]
# Ensure transitive `aegis` (pulled in by `turso`) builds on macOS arm64 by
# forcing the `pure-rust` feature, which skips the C/NEON backend that fails
# with Apple clang (`veor3q_u8` in `aegis128l_neon_sha3.c`).
aegis = { version = "0.9.6", features = ["pure-rust"] }


# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
tempfile = "3.23.0"
