[package]
name = "agentfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "agentfs"
path = "src/lib.rs"

[[bin]]
name = "agentfs"
path = "src/main.rs"

[features]
default = []
strict = []

[dependencies]
agentfs-sdk = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
sha1 = { workspace = true }
turso = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
clap_complete = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

# MCP Server support
base64 = { workspace = true }

# NFS server for userspace filesystem (used by `agentfs run` and `agentfs nfs`)
uuid = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
# Vendored nfsserve dependencies
byteorder = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
filetime = { workspace = true }

# Unix dependencies
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

# Linux-only dependencies for FUSE functionality
[target.'cfg(target_os = "linux")'.dependencies]
# Vendored fuser dependencies (pure-Rust FUSE implementation)
log = { workspace = true }
memchr = { workspace = true }
page_size = { workspace = true }
smallvec = { workspace = true }
zerocopy = { workspace = true }
nix = { workspace = true }

# macOS dependencies for NFS functionality (no FUSE - uses nfsserve instead)
[target.'cfg(target_os = "macos")'.dependencies]
aegis = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
