[package]
name = "agentfs-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentfs-sdk = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
libc = { workspace = true }

# Linux-only dependencies for sandbox functionality
[target.'cfg(target_os = "linux")'.dependencies]
reverie = { workspace = true }
reverie-ptrace = { workspace = true }
reverie-process = { workspace = true }
reverie-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
