[package]
name = "agentfs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for AgentFS"

[lib]
name = "agentfs_cli"
path = "src/lib.rs"

[[bin]]
name = "agentfs"
path = "src/main.rs"

[features]
default = []
strict = []

[lints]
workspace = true

[dependencies]
agentfs-core = { workspace = true }
agentfs-mount = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
sha1 = { workspace = true }
turso = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
clap_complete = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

# MCP Server support
base64 = { workspace = true }

uuid = { workspace = true }

# Unix dependencies
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
