[package]
name = "agentfs-nfs"
version.workspace = true
edition.workspace = true
description = "NFS adapter for AgentFS"
license.workspace = true

[dependencies]
agentfs-core = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
byteorder = { workspace = true }
filetime = { workspace = true }
libc = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
